2001-11-26  Glynn Foster  <glynn.foster@sun.com>

	* launcher.c, session.c: Quick hack to get launchers on the panel
	again. Don't expect it to be working 100% of the time. We really
	need to get this stuff using gnome-vfs all over.

2001-11-26  Glynn Foster  <glynn.foster@sun.com>

	* drawer.c: * extern.c: * foobar-widget.c: 
	* gnome-panel-properties.c: * gnome-panel-screenshot.c: 
	* gnome-run.c: * launcher.c: * logout.c: * main.c:
	* menu-properties.c: * menu.c: * nothing.cP: * panel-marshal.list:
	* panel-util.c: * panel-widget.c: * panel.c: * panel_config.c:
	* session.c: * sliding-widget.c: * status-docklet.c: * status.c: 
	* swallow.c: 

	More gtk_signal donkey work. The gtk_signal stuff that is left is 
	a) cruft that we're gonna lose b) stuff that I don't know the 
	GObject replacement for.

Mon Nov 26 00:57:16 2001  George Lebl <jirka@5z.com>

	* applet.c, menu-properties.[ch], menu.[ch], panel.c, session.c:
	  get rid of the "." main menu parameter hack.  I feel sort of
	  sentimental removing this since this dates back from the days
	  when federico maintained the panel.  I don't know why it lived
	  on so long anyway :)

	* menu.c: remove the properties menu stuff, just about everyone
	  agreed it was quite a horrible UI

	* foobar-widget.c, menu.c, panel-util.[ch]: add
	  panel_is_program_in_path which is like g_find_program_in_path
	  but returns just a boolean

	* menu.h, session.c: remove some compatibility hacks dating to
	  some ancient 1.0 versions or whatnot.  We'll break config compat
	  anyway.

Sun Nov 25 20:07:06 2001  George Lebl <jirka@5z.com>

	* launcher.c, menu.c, menu-fentry.[ch], main.c: remove the
	  merged menu hack since that's taken care of in the
	  vfolder-desktop-method nowdays

	* quick-desktop-reader.[ch], panel-util.[ch]: add sort_order
	  to quick desktop item and move the vfs helper routines to
	  the util file

	* menu-fentry.[ch], menu.c, menu-properties.c: port to gnome-vfs